<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_inicio_disable"
        android:title="@string/menu_inicio"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_categorias_disable"
        android:title="@string/menu_categoria"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_favoritos_disable"
        android:title="@string/menu_favorito"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_hg"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_conta"
        app:showAsAction="always" />

</menu>
